[gd_scene load_steps=23 format=3 uid="uid://cgyntj4iqgpco"]

[ext_resource type="Script" path="res://frog.gd" id="1_78fio"]
[ext_resource type="Texture2D" uid="uid://d35see8qixr5c" path="res://Resources/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/enemy-deadth.png" id="2_kpgep"]
[ext_resource type="Texture2D" uid="uid://cndah1wyn22vo" path="res://Resources/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-idle.png" id="3_no86x"]
[ext_resource type="Texture2D" uid="uid://duvgdovi27xt3" path="res://Resources/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-jump.png" id="4_x1ujb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0stw"]
size = Vector2(17, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_0urwo"]
atlas = ExtResource("2_kpgep")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndsee"]
atlas = ExtResource("2_kpgep")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_v40ct"]
atlas = ExtResource("2_kpgep")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mcsi"]
atlas = ExtResource("2_kpgep")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqg8m"]
atlas = ExtResource("2_kpgep")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_baycv"]
atlas = ExtResource("2_kpgep")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhe68"]
atlas = ExtResource("3_no86x")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4br6"]
atlas = ExtResource("3_no86x")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85bsy"]
atlas = ExtResource("3_no86x")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eax5"]
atlas = ExtResource("3_no86x")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7qle"]
atlas = ExtResource("4_x1ujb")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrxhv"]
atlas = ExtResource("4_x1ujb")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eafxe"]
atlas = ExtResource("4_x1ujb")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_asdsg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0urwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndsee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v40ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mcsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqg8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baycv")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhe68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4br6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85bsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eax5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhe68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhe68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhe68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhe68")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7qle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrxhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eafxe")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1trrv"]
radius = 201.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjy3p"]
size = Vector2(15, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxeue"]
size = Vector2(23, 9)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_78fio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_g0stw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_asdsg")
animation = &"Idle"

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_1trrv")

[node name="EnemyVulnerable" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyVulnerable"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_xjy3p")

[node name="PlayerDamage" type="Area2D" parent="."]
position = Vector2(-0.5, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDamage"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_bxeue")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="EnemyVulnerable" to="." method="_on_enemy_vulnerable_body_entered"]
[connection signal="body_entered" from="PlayerDamage" to="." method="_on_player_damage_body_entered"]
